@@ -331,29 +331,9 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <version>2.16</version>
             <configuration>
-                <excludes>
-                    <exclude>**/*IntegrationTest.java</exclude>
-                </excludes>
-                <argLine>-Dfile.encoding=UTF-8</argLine>
-                <forkCount>1</forkCount>
+                <argLine>-Dfile.encoding=UTF-8  -Xmx512M -XX:MaxPermSize=128M</argLine>
+                <forkCount>4</forkCount>
             </configuration>
-            <executions>
-                <execution>
-                    <id>integration-test</id>
-                    <goals>
-                        <goal>test</goal>
-                    </goals>
-                    <phase>integration-test</phase>
-                    <configuration>
-                        <excludes>
-                            <exclude>none</exclude>
-                        </excludes>
-                        <includes>
-                            <include>**/*IntegrationTest.java</include>
-                        </includes>
-                    </configuration>
-                </execution>
-            </executions>
         </plugin>
     </plugins>
   </build>
@@ -564,7 +544,7 @@
       <dependency>
         <groupId>xerces</groupId>
         <artifactId>xercesImpl</artifactId>
-        <version>2.7.1</version>
+        <version>2.11.0</version>
       </dependency>
 			<!-- Patched XML Resolver 1.2 from apache xml-commons - fixes problems
 			     with windows URLs -->
@@ -917,16 +897,6 @@
         <version>${spring.version}</version>
       </dependency>
       <dependency>
-          <groupId>org.springframework</groupId>
-          <artifactId>spring-aop</artifactId>
-          <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-            <groupId>aspectj</groupId>
-            <artifactId>aspectjweaver</artifactId>
-            <version>1.5.2</version>
-      </dependency>
-      <dependency>
         <groupId>org.springframework.security</groupId>
         <artifactId>spring-security-core</artifactId>
         <version>${spring.security.version}</version>
@@ -1030,6 +1000,12 @@
       <!-- The version number is specified above. -->
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>com.google.jimfs</groupId>
+          <artifactId>jimfs</artifactId>
+          <version>1.0</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
 
   <!-- ================================================================== -->
@@ -1105,7 +1081,6 @@
   <modules>
     <module>common</module>
     <module>cachingxslt</module>
-    <module>jeeves</module>
     <module>sde</module>
     <module>web-ui</module>
     <module>web-ui-docs</module>
